2005-07-20  Christian Stimming <stimming@tuhh.de>

	* src/lib/methods.cc: B6, B7 and B8 methods added by Alexander
	Kurz.

2005-06-22  Christian Stimming <stimming@tuhh.de>

	* configure.in: Release version 1.6

2005-06-21  Christian Stimming <stimming@tuhh.de>

	* src/lib/methods.cc: B4 and B5 methods added by Alexander Kurz

2005-05-24  Christian Stimming <stimming@tuhh.de>

	* configure.in: Release version 1.5

	* src/bankdata/bankdata.txt: Updated bankdata file, now valid from
	2005-06-06 onwards

	* src/lib/Makefile.am: Incremented SO_VERSION and SO_AGE because
	of added iban functions.

2005-04-20  Andreas Degert  <ad@papyrus-gmbh.de>

	* src/python/ktoblzcheck.py: do not use the global shared library
	handle inside __del__ functions; global variables might be already
	deleted when __del__ is called.

	* src/include/iban.h: add dokumentation for constructor.

2005-04-20  Christian Stimming <stimming@tuhh.de>

	* doc/mainpage.doxygen.in: Added doxygen mainpage that will also
	be used as the new web page. Improved documentation all over the
	place.
	
	* src/python/ktoblzcheck.py: Added Andreas' python module for
	accessing ktoblzcheck. This is enabled by --enable-python.

	* src/lib/iban_check.cc: Add test program. Prepare "make check"
	rules for using the test program.
	
	* src/include/iban.h, src/lib/iban.cc: Add const where applicable.

2005-04-19  Andreas Degert  <ad@papyrus-gmbh.de>

	* src/bin/ibanchk.cc: work with new interface, use streams instead
	of stdio, accept IBAN as command line argument.

	* src/include/iban.h, src/lib/iban.cc: new interface and
	implementation.

	* src/bankdata/ibandata.txt: data file describing IBAN format.

2005-04-11  Christian Stimming <stimming@tuhh.de>

	* src/include/iban.h, src/lib/iban.cc: Add C wrappers to iban and
	added warning about potential code problems there.

2005-04-07  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Make sure the account-id is not too
	long.
