@@ -1,3 +1,7 @@
+2005-07-21  Christian Stimming <stimming@tuhh.de>
+
+	* autogen.sh: Simplify the bootstrap script even more.
+
 2005-07-20  Christian Stimming <stimming@tuhh.de>
 
 	* src/lib/methods.cc: B6, B7 and B8 methods added by Alexander
